--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,28 @@
+amazoncaptcha==0.5.11
 attrs==23.2.0
+beautifulsoup4==4.11.1
 certifi==2024.2.2
 charset-normalizer==3.3.2
+et-xmlfile==1.1.0
 exceptiongroup==1.2.1
 h11==0.14.0
 idna==3.7
+numpy==1.26.4
+opencv-python==4.6.0.66
+openpyxl==3.1.2
 outcome==1.3.0.post0
 packaging==24.0
+Pillow==9.5.0
 pydub==0.25.1
 PySocks==1.7.1
+pytesseract==0.3.10
 python-dotenv==1.0.1
-requests==2.31.0
+requests==2.30.0
 selenium==4.8.3
 selenium-recaptcha-solver==1.9.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
+soupsieve==2.5
 SpeechRecognition==3.8.1
 trio==0.25.1
 trio-websocket==0.11.1
