--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ build/
 # Ignore virtual environment directories
 venv/
 env/
+codebase/__pycache__/dataset_loader.cpython-310.pyc
+codebase/parser/__pycache__/parse.cpython-310.pyc
