--- a/requirements.txt
+++ b/requirements.txt
@@ -7,19 +7,24 @@ et-xmlfile==1.1.0
 exceptiongroup==1.2.1
 h11==0.14.0
 idna==3.7
+lxml==4.9.3
 numpy==1.26.4
 opencv-python==4.6.0.66
 openpyxl==3.1.2
 outcome==1.3.0.post0
 packaging==24.0
+pandas==2.2.2
 Pillow==9.5.0
 pydub==0.25.1
 PySocks==1.7.1
 pytesseract==0.3.10
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.1
 requests==2.30.0
 selenium==4.8.3
 selenium-recaptcha-solver==1.9.0
+six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.5
@@ -27,6 +32,7 @@ SpeechRecognition==3.8.1
 trio==0.25.1
 trio-websocket==0.11.1
 typing_extensions==4.11.0
+tzdata==2024.1
 urllib3==1.26.18
 webdriver-manager==4.0.1
 wsproto==1.2.0
