--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,6 @@ venv/
 env/
 codebase/__pycache__/dataset_loader.cpython-310.pyc
 codebase/parser/__pycache__/parse.cpython-310.pyc
+codebase/__pycache__/dataset_loader.cpython-310.pyc
+codebase/parser/__pycache__/parse.cpython-310.pyc
+**/__pycache__/
