--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,8 @@ rad.json
 TestResults.xml
 venv/
 venv/*
-myvenv/
-myvenv/*
+myenv/
+myenv/*
 pycache
 # Ignore __pycache__ directories
 __pycache__/
